# cortex

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMMAND-MODE-GUIDE.md  COMMAND_OUTPUT_IMPROVEMENTS.md  Cargo.toml  DECRYPT-LAUNCHPAD-EMAIL.md  DEV-QUICK-START.md  DEVELOPMENT.md  DEV_GUIDE.md  GEMINI.md  GITHUB-SECRETS-SETUP.md  GPG-KEY-UPLOAD-HELP.md  HOMEBREW-SETUP.md  HOMEBREW-SIMPLE.md  INSTALLATION.md  Makefile  PPA-ACTION-PLAN.md  PROJECT_ANALYSIS.md  PUBLISH-TO-APT.md  QUICK-START-PPA.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  RELEASE-CHECKLIST.md  RELEASE-NOW.md  RELEASE.md  START-HERE.md  TERMINAL_FEATURES.md  TODO-AI.md  UBUNTU-VERSIONS.md  YOUR-KEY-INFO.md  build-no-ssh.sh  cobertura.xml  cortex.toml.example  cortex_0.1.0_amd64.deb  decrypt-launchpad.sh  (+26 more)
.github/: SECRETS.md  dependabot.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml  build-release.yml.disabled  ci.yml  develop.yml  nightly.yml  pr-checks.yml  pr-checks.yml.disabled  prepare-mac-app-store.yml.disabled  promote-to-main.yml  publish-aur.yml  publish-chocolatey.yml  publish-homebrew.yml  publish-ppa-all.yml  publish-ppa-fixed.yml  publish-ppa-manual.yml  publish-ppa-simple.yml  publish-ppa.yml  publish-snap.yml  release-automation.yml  release-automation.yml.disabled  release-homebrew.yml  release-homebrew.yml.disabled  release.yml  release.yml.disabled  security.yml  security.yml.disabled
Formula/: cortex-fm.rb  cortex.rb
assets/: cortex.desktop
assets/icons/: README.md  generate-icons.sh  icon-config.json
benches/: performance.rs
cortex-cli/: Cargo.toml
cortex-cli/src/: command.rs  command_palette.rs  main.rs  main_old.rs  operations.rs  update.rs
cortex-cli/src/app/: config.rs  event_handling.rs  initialization.rs  lifecycle.rs  mod.rs  state.rs  utilities.rs
cortex-cli/src/commands/: executor.rs  mod.rs  plugin.rs  special.rs
cortex-cli/src/connections/: mod.rs
cortex-cli/src/handlers/: context_menu.rs  dialog.rs  file_event.rs  keyboard.rs  mod.rs  mouse.rs  progress.rs
cortex-core/: Cargo.toml
cortex-core/src/: cache.rs  config.rs  file_monitor.rs  fs.rs  git.rs  lib.rs  memory.rs  operations.rs  search.rs  shortcuts.rs  state.rs  theme.rs  vfs.rs  vfs_original.rs  virtual_scroll.rs
cortex-core/src/ai/: context.rs  groq.rs  hybrid.rs  mod.rs  ollama.rs  prompts.rs  provider.rs  simple.rs
cortex-core/src/ai/embedded/: inference.rs  mod.rs
cortex-core/src/remote/: ftp_provider.rs  mod.rs  sftp_provider.rs  ssh_manager.rs  tests.rs
cortex-core/src/terminal/: emulator.rs  manager.rs  mod.rs  renderer.rs  shell.rs
cortex-core/src/vfs/: builder.rs  mod.rs  traits.rs  types.rs
cortex-core/src/vfs/providers/: archive.rs  ftp.rs  local.rs  mod.rs
cortex-core/src/vfs/providers/ssh/: connection.rs  mod.rs  sftp.rs
cortex-core/src/window/: backend.rs  manager.rs  mod.rs  renderer.rs
cortex-platform/: Cargo.toml
cortex-platform/src/: lib.rs  platform.rs
cortex-platform/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
cortex-platform/src/trash/: linux.rs  macos.rs  mod.rs  windows.rs
cortex-plugins/: Cargo.toml
cortex-plugins/src/: lib.rs
cortex-tui/: Cargo.toml
cortex-tui/src/: ai_chat_dialog.rs  api_key_dialog.rs  command_palette_dialog.rs  config_dialog.rs  connection_dialog.rs  dialogs.rs  editor.rs  editor_dialog.rs  events.rs  filter_dialog.rs  lib.rs  model_selection_dialog.rs  mouse.rs  notification.rs  plugin_dialog.rs  search_dialog.rs  terminal_view.rs  ui.rs  viewer.rs  viewer_dialog.rs
cortex-updater/: Cargo.toml
cortex-updater/src/: downloader.rs  installer.rs  lib.rs  rollback.rs  updater.rs
debian-build/DEBIAN/: control
docs/: AI_SETUP.md  API_KEY_SETUP.md  BRANCHING.md  DEPLOY-NOW.md  PUBLISHING.md  README.md  ROADMAP.md  cortex-architecture-plan.md
docs/development/: ai-features-plan.md  packaging-checklist.md  test-command-line.md
docs/features/: ARCHIVE-SUPPORT-SUMMARY.md  COMMAND-PALETTE.md  DIRECTORY-CACHING.md  NETWORK-REMOTE-SUMMARY.md  SEARCH-SYSTEM-SUMMARY.md
docs/guides/: GETTING-STARTED.md  KEYBOARD-SHORTCUTS.md
docs/phases/: PHASE-3-PLAN.md  PHASE-4-COMPLETION.md  PHASE-4-IMPLEMENTATION-GUIDE.md  PHASE-4-PLAN.md  PHASE-5-COMPLETE.md  PHASE-5-PLAN.md  PHASE-5-PROGRESS.md  PHASE-5-SUMMARY.md  PHASE-6-COMPLETE.md  PHASE-6-PLAN.md  PHASE-6-PROGRESS.md  PHASE-7-PLAN.md  PHASE-8-PLAN.md  PHASE3-SUMMARY.md
examples/: test_ai.rs
homebrew-formula/: cortex-fm-full.rb  cortex-fm.rb
packaging/: build-packages.sh
packaging/arch/: PKGBUILD
packaging/debian/: build-ppa-package.sh  changelog  control  publish-to-ppa.md  rules
packaging/homebrew/: cortex.rb
packaging/windows/: cortex.wxs
plugins/: example.lua  file_stats.lua  quick_actions.lua
scripts/: build-release-macos.sh  create-release.sh  dev-server.sh  publish-homebrew.sh
test_archive/: file1.txt  file2.txt
