[package]
name = "cortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../cortex-core", features = ["ssh"] }
cortex-tui = { path = "../cortex-tui" }
cortex-plugins = { path = "../cortex-plugins" }
cortex-updater = { path = "../cortex-updater" }
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = { workspace = true }
ratatui = { workspace = true }
semver = "1.0"
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "performance"
harness = false
path = "../benches/performance.rs"
