[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
humansize = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
ssh2 = { workspace = true }
url = { workspace = true }
suppaftp = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sevenz-rust = { workspace = true }
cortex-plugins = { path = "../cortex-plugins" }
crossterm = { workspace = true }
