[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
humansize = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
# ssh2 = { workspace = true, optional = true }  # Commented out - requires OpenSSL
url = { workspace = true }
# suppaftp = { workspace = true, optional = true }  # Commented out - requires OpenSSL
tar = { workspace = true }
flate2 = { workspace = true }
sevenz-rust = { workspace = true }
cortex-plugins = { path = "../cortex-plugins" }
cortex-platform = { path = "../cortex-platform" }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
# For embedded AI
num_cpus = "1.16"
sys-info = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "test_ai"
path = "../examples/test_ai.rs"

# [features]
# default = []
# ssh = ["ssh2", "suppaftp"]
# full = ["ssh"]
