[package]
name = "cortex-updater"
version = "0.1.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6.0"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
log = "0.4"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
zip = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"